<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Welcome">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/txtWelcome"
            android:text="@string/welcome"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:fontFamily="casual"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/txtStudent"
            android:text="@string/student"
            android:paddingTop="5dp"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:fontFamily="casual" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/txtTutor"
            android:text="@string/tutor"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:fontFamily="casual"
            android:paddingTop="5dp"/>


    </LinearLayout>


</RelativeLayout>